--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <label for="start">Start date:</label>
 
         <input type="date" id="start" name="start_date"
-               value="YYYYMMDD"
+               
                min="2021-01-01" max="2021-12-31">
    <button>Holiday Info</button>
    </p>
@@ -28,6 +28,6 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-<script src="./api2.js"></script> 
+<script src="./scripts.js"></script> 
 </body>
 </html>
