--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </p>
     </div>
     <p id="eventDate">
-        <label for="start">Start date:</label>
+        <label for="start">Select Date: </label>
 
         <input type="date" id="start" name="start_date"
                
